# Network

./: .gitignore  CMakeLists.txt  main.cpp
Client/: CMakeLists.txt  main.cpp
Network/: CMakeLists.txt
Network/CLI/: CLI.cpp  CLI.h  CMakeLists.txt  main_slitest.cpp
Network/Core/: Authorization.cpp  Authorization.h  CLI.cpp  CLI.h  ConnectionInfo.cpp  ConnectionInfo.h  Server.cpp  Server.h  ServerConfig.cpp  ServerConfig.h  Status.cpp  Status.h  Utils.h
Network/Core/Authorization/: Authorization.h
Network/Core/CLI/: CLI.cpp  CLI.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
Network/Sockets/: ClientInfo.cpp  ClientInfo.h  ClientSocket.cpp  ClientSocket.h  ISocket.cpp  ISocket.h  LinuxServeSocket.cpp  LinuxServeSocket.h  ServerSocket.cpp  ServerSocket.h  WindowsClientSocket.cpp  WindowsClientSocket.h  WindowsServerSocket.cpp  WindowsServerSocket.h  WindowsServerTCPSocket.cpp  WindowsServerTCPSocket.h
ServerApp/: CMakeLists.txt  main.cpp
